--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Mill_Turn_Converter</string>
-    <string name="app_title_name">Mill Turn Converter</string>
+    <string name="app_name">PocketDRO</string>
+    <string name="app_title_name">PocketDRO</string>
 </resources>
